setup/resources/install/post-install/kfserving/0.5.0-rc2/expose-dashboards/expose-istio-metrics.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-metrics
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: istio-metrics
      protocol: HTTP
    hosts:
    - "dev.airuntime.com"
    - "kiali.dev.airuntime.com"
    - "prometheus.dev.airuntime.com"
    - "grafana.dev.airuntime.com"
    - "tracing.dev.airuntime.com"
    - "zipkin.dev.airuntime.com"
  - port:
      name: istio-kiali
      number: 15029
      protocol: HTTP
    hosts:
    - "*"
  - port:
      name: istio-prometheus
      number: 15030
      protocol: HTTP
    hosts:
    - "*"
  - port:
      name: istio-grafana
      number: 15031
      protocol: HTTP
    hosts:
    - "*"
  - port:
      name: istio-tracing
      number: 15032
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: istio-metrics
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-metrics
  http:
  - match:
    - port: 15029
    route:
    - destination:
        host: kiali
        port:
          number: 20001
  - match:
    - port: 15030
    route:
    - destination:
        host: prometheus
        port:
          number: 9090
  - match:
    - port: 15031
    route:
    - destination:
        host: grafana
        port:
          number: 3000
  - match:
    - port: 15032
    route:
    - destination:
        host: tracing
        port:
          number: 80
  - match:
    # - method:
    #     exact: GET
    - uri:
        prefix: /kiali
      port: 80
    rewrite:
      # Rewrite the original host header to the host header of Search service
      # in order to redirect requests to Search service.
      # authority: grafana.knative-monitoring.svc.cluster.local
      uri: /kiali
    route:
    - destination:
        host: kiali
        port:
          number: 20001
  - match:
    # - method:
    #     exact: GET
    - uri:
        prefix: /graph
      port: 80
    rewrite:
      # Rewrite the original host header to the host header of Search service
      # in order to redirect requests to Search service.
      # authority: grafana.knative-monitoring.svc.cluster.local
      # uri: /graph
    route:
    - destination:
        host: prometheus
        port:
          number: 9090
  - match:
    # - method:
    #     exact: GET
    - uri:
        prefix: /grafana
      port: 80
    rewrite:
      # Rewrite the original host header to the host header of Search service
      # in order to redirect requests to Search service.
      # authority: grafana.knative-monitoring.svc.cluster.local
      # uri: /kiali
    route:
    - destination:
        host: grafana
        port:
          number: 3000
  - match:
    # - method:
    #     exact: GET
    - uri:
        prefix: /jaeger
      port: 80
    rewrite:
      # Rewrite the original host header to the host header of Search service
      # in order to redirect requests to Search service.
      # authority: grafana.knative-monitoring.svc.cluster.local
      uri: /jaeger
    route:
    - destination:
        host: tracing
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kiali
  namespace: istio-system
spec:
  host: kiali.istio-system
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: prometheus
  namespace: istio-system
spec:
  host: prometheus.istio-system
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: grafana
  namespace: istio-system
spec:
  host: grafana.istio-system
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: tracing
  namespace: istio-system
spec:
  host: tracing.istio-system
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  gateways:
  - istio-metrics
  hosts:
  - "kiali.dev.airuntime.com"
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: kiali
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: istio-system
spec:
  gateways:
  - istio-metrics
  hosts:
  - "prometheus.dev.airuntime.com"
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: prometheus
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  gateways:
  - istio-metrics
  hosts:
  - "grafana.dev.airuntime.com"
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: grafana
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-vs
  namespace: istio-system
spec:
  gateways:
  - istio-metrics
  hosts:
  - "tracing.dev.airuntime.com"
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: tracing
        port:
          number: 80
---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: knative-grafana-vs
#   namespace: knative-monitoring
# spec:
#   gateways:
#   # This is the gateway shared in knative service mesh.
#   - knative-ingress-gateway.knative-serving.svc.cluster.local
#   hosts:
#   - "zipkin.dev.airuntime.com"
#   http:
#   - match:
#     # - method:
#     #     exact: GET
#     - uri:
#         prefix: /knative/grafana
#       port: 80
#     rewrite:
#       # Rewrite the original host header to the host header of Search service
#       # in order to redirect requests to Search service.
#       authority: grafana.knative-monitoring.svc.cluster.local
#       uri: /
#     route:
#     - destination:
#         host: grafana.knative-monitoring.svc.cluster.local
#         port:
#           number: 3000
  
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: grafana-vs
#   namespace: istio-system
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - grafana-gateway
#   http:
#   - match:
#     - port: 15031
#     route:
#     - destination:
#         host: grafana
#         port:
#           number: 3000
# # apiVersion: networking.istio.io/v1beta1
# # kind: VirtualService
# # metadata:
# #   name: grafana-vs
# #   namespace: istio-system
# # spec:
# #   hosts:
# #   - "*"
# #   gateways:
# #   - grafana-gateway
# #   http:
# #   - match:
# #     - method:
# #         exact: GET
# #       uri:
# #         prefix: /istio/grafana/
# #     rewrite:
# #       uri: /
# #     route:
# #     - destination:
# #         host: grafana.istio-system.svc.cluster.local
# #         port:
# #           number: 3000
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: DestinationRule
# metadata:
#   name: grafana
#   namespace: istio-system
# spec:
#   host: grafana
#   trafficPolicy:
#     tls:
#       mode: DISABLE
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: Gateway
# metadata:
#   name: prometheus-gateway
#   namespace: istio-system
# spec:
#   selector:
#     istio: ingressgateway
#   servers:
#   - port:
#       number: 15030
#       name: http-prom
#       protocol: HTTP
#     hosts:
#     - "*"
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: prometheus-vs
#   namespace: istio-system
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - prometheus-gateway
#   http:
#   - match:
#     - port: 15030
#     route:
#     - destination:
#         host: prometheus
#         port:
#           number: 9090
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: DestinationRule
# metadata:
#   name: prometheus
#   namespace: istio-system
# spec:
#   host: prometheus
#   trafficPolicy:
#     tls:
#       mode: DISABLE
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: Gateway
# metadata:
#   name: kiali-gateway
#   namespace: istio-system
# spec:
#   selector:
#     istio: ingressgateway
#   servers:
#   - port:
#       # number: 80
#       number: 15029
#       name: http-kiali
#       protocol: HTTP
#     hosts:
#     # - "kiali.kfs.pydemia.org"
#     - "*"
#   # - port:
#   #     number: 15029
#   #     name: http-kiali
#   #     protocol: HTTP
#   #   hosts:
#   #   - "*"
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: kiali-vs
#   namespace: istio-system
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - kiali-gateway
#   http:
#   - match:
#     # - method:
#     #     exact: GET
#     - uri:
#         prefix: /istio/kiali/
#       port: 15029
#     rewrite:
#       # Rewrite the original host header to the host header of Search service
#       # in order to redirect requests to Search service.
#       authority: kiali.istio-system.svc.cluster.local
#       uri: /istio/kiali
#     route:
#     - destination:
#         host: kiali.istio-system.svc.cluster.local
#         port:
#           number: 20001
#   - match:
#     - port: 15029
#     route:
#     - destination:
#         host: kiali.istio-system.svc.cluster.local
#         port:
#           number: 20001
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: DestinationRule
# metadata:
#   name: kiali
#   namespace: istio-system
# spec:
#   host: kiali
#   trafficPolicy:
#     tls:
#       mode: DISABLE
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: Gateway
# metadata:
#   name: tracing-gateway
#   namespace: istio-system
# spec:
#   selector:
#     istio: ingressgateway
#   servers:
#   - port:
#       number: 15032
#       name: http-tracing
#       protocol: HTTP
#     hosts:
#     - "*"
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: tracing-vs
#   namespace: istio-system
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - tracing-gateway
#   http:
#   - match:
#     - port: 15032
#     route:
#     - destination:
#         host: tracing
#         port:
#           number: 80
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: DestinationRule
# metadata:
#   name: tracing
#   namespace: istio-system
# spec:
#   host: tracing
#   trafficPolicy:
#     tls:
#       mode: DISABLE
# ---
